# SpaceBattle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SpaceBattle/: CMakeLists.txt  CMakeSettings.json  Point.cpp  Point.h  SpaceBattle.cpp  SpaceBattle.h  SpaceMap.cpp  SpaceMap.h  SpaceShip.cpp  SpaceShip.h  game.cpp
SpaceBattle/apps/: CMakeLists.txt  game.cpp
SpaceBattle/assets/i18n/en/LC_MESSAGES/: game.mo  game.po
SpaceBattle/assets/i18n/ru/LC_MESSAGES/: game.mo  game.po
SpaceBattle/include/SpaceBattle/: MiniGame.h  Point.h  SpaceBattle.h  SpaceMap.h  SpaceShip.h
SpaceBattle/src/: CMakeLists.txt  MiniGame.cpp  Point.cpp  SpaceBattle.cpp  SpaceMap.cpp  SpaceShip.cpp
